Добавление к проекту от 01.12.22

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Предсказание свойств</title>
+ <style>
+  ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #0000FF;
+        }
+
+        li {
+            float: right;
+            }
+
+        li a {
+              display: block;
+              color: white;
+              text-align: center;
+              padding: 16px;
+              text-decoration: none;
+        }
+
+        li a:hover {
+              background-color: #0080FF;
+        }
+        .container {
+                     width: 50%;
+                     padding: 20px 30px;
+                     background: #E0FFFF;
+                     margin-left: auto;
+                     margin-right: auto;
+                    }
+        .text {
+                text-align: justify;
+               }
+</style>
 </head>
-<body>
-$END$
+
+<body bgcolor="#E0FFFF">
+     <ul>
+
+          <li><a href="/index">На главную страницу</a></li>
+
+    </ul>
+     <br>
+       <h2 align="center"> <b>Описание программы</b>  </h2>
+<hr>
+<div class="container">
+<p class="text"> Программа предназначена для прогнозирования конечных свойств композитных материалов. </p>
+<br>
+<hr>
+<p class="text">   Композиционные материалы — это искусственно созданные материалы, состоящие из нескольких других с четкой границей между ними. Композиты обладают теми свойствами, которые не наблюдаются у компонентов по отдельности.
+  При этом композиты являются монолитным материалом, т. е. компоненты материала неотделимы друг от друга без разрушения конструкции в целом.</p>
+ <br>
+<hr>
+<p class="text">   В основе прогнозирования лежит модель полносвязной нейронной сети, включающая два скрытых слоя.
+На вход нейронной сети необходимо подать данные о начальных свойствах компонентов композиционных материалов.
+  На выходе будут спрогнозированы конечные свойства получаемых композиционных материалов.</p>
+
+<br>
+<hr>
+<p class="text">   В разделе "Введите значения, для которых надо спрогнозировать свойства композитных материалов" необходимо в каждую ячейку внести числовые данные  параметров.
+                   После ввода всех параметров необходимо нажать кнопку "Расчитать". В разделе "Результат прогноза свойств композитных материалов" отобразятся результаты прогноза целевых свойств композитного материала.
+                   Также в таблицу результатов прогноза будет добавлена строка с данными, введенными пользователем, и спрогнозированными данными. Результаты будут сохранены на сервере и будут доступны пользователю при следующих загрузках.
+    Для сохранения результатов расчета на локальном компьютере пользователя необходимо нажать кнопку "Сохранить результат". Для очистки результатов расчета необходимо нажать кнопку "Очистить результат".
+    Нажатие кнопки "Очистить форму" приведет к удалению текущих значению введенных пользователем
+
+<br>
+<hr>
+<p class="text">
+    Автор: Веретельник Алексей, 2022 г.
+
+</p>
+</div>
 </body>
 </html>
