--- a/static/style.css
+++ b/static/style.css
@@ -6,12 +6,12 @@
 }
 .table thead th {
 	font-weight: bold;
-	text-align: left;
+	text-align: center;
 	border: none;
 	padding: 10px 15px;
-	background: #EDEDED;
+	background: #66CDAA;
 	font-size: 14px;
-	border-top: 1px solid #ddd;
+	border-top: 5px solid 	#000000;
 }
 .table tr th:first-child, .table tr td:first-child {
 	border-left: 1px solid #ddd;
@@ -26,7 +26,7 @@
 	border-radius: 0 20px 0 0;
 }
 .table tbody td {
-	text-align: left;
+	text-align: center;
 	border: none;
 	padding: 10px 15px;
 	font-size: 14px;
